@@ -8,7 +8,7 @@
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
   <property name="jre" location="${home}/jre_base"/>
-  <property name="version" value="0.1"/>
+  <property name="version" value="0.2"/>
   <property name="graal" value="true"/>
 
   <property name="debian.depends" value="nfs-kernel-server"/>
