@@ -1,2 +1,5 @@
+5/4/2021 : 0.2 released
+  - fix : DHCP pxe proxy mode
+
 5/3/2021 : 0.1 released
   - init public release
